added AWS Glue support for creating databases and tables, and adding available partitions to the table