@@ -10,11 +10,13 @@ package clusterless.lambda.workload.s3copy;
 
 import clusterless.lambda.arc.ArcEventHandler;
 import clusterless.lambda.arc.ArcEventObserver;
+import clusterless.lambda.manifest.AttemptCounter;
 import clusterless.lambda.manifest.ManifestReader;
 import clusterless.lambda.manifest.ManifestWriter;
 import clusterless.model.UriType;
 import clusterless.model.deploy.SinkDataset;
 import clusterless.model.manifest.Manifest;
+import clusterless.model.manifest.ManifestState;
 import clusterless.substrate.aws.event.ArcNotifyEvent;
 import clusterless.substrate.aws.event.ArcWorkloadContext;
 import clusterless.substrate.aws.sdk.ClientBase;
@@ -29,7 +31,6 @@ import software.amazon.awssdk.services.s3.S3Client;
 
 import java.net.URI;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  *
@@ -38,9 +39,9 @@ public class S3CopyArcEventHandler extends ArcEventHandler<S3CopyProps> {
     private static final Logger LOG = LogManager.getLogger(S3CopyArcEventHandler.class);
 
     protected static final S3 s3 = new S3();
+    protected static final AttemptCounter attemptCounter = new AttemptCounter();
 
     protected ManifestReader manifestReader = new ManifestReader();
-
     protected Map<String, ManifestWriter> manifestWriters = ManifestWriter.writers(
             arcProps().sinks(),
             arcProps().sinkManifestTemplates(),
@@ -61,12 +62,21 @@ public class S3CopyArcEventHandler extends ArcEventHandler<S3CopyProps> {
         Map<String, URI> result = new LinkedHashMap<>();
 
         //  copy files
-        URI fromDatasetPath = incomingManifest.dataset().pathURI();
+        URI fromDatasetPath = notifyEvent.dataset().pathURI();
         List<URI> fromUris = incomingManifest.uris();
 
         for (Map.Entry<String, SinkDataset> sinkRoleEntry : arcProps().sinks().entrySet()) {
-
             String toRole = sinkRoleEntry.getKey();
+            ManifestWriter manifestWriter = manifestWriters.get(toRole);
+            if (incomingManifest.state() == ManifestState.empty) {
+                LOG.info("manifest state empty, role: {} -> {}", fromRole, toRole);
+                URI manifestURI = manifestWriter.writeEmptyManifest(lotId);
+                result.put(toRole, manifestURI);
+
+                eventObserver.applyToManifest(toRole, manifestURI);
+                continue;
+            }
+
             SinkDataset sinkDataset = sinkRoleEntry.getValue();
 
             eventObserver.applyToDataset(toRole, sinkDataset);
@@ -101,8 +111,6 @@ public class S3CopyArcEventHandler extends ArcEventHandler<S3CopyProps> {
                     }
             );
 
-            ManifestWriter manifestWriter = manifestWriters.get(toRole);
-
             URI manifestURI;
 
             if (!failed.isEmpty()) { // unintentional
@@ -135,13 +143,18 @@ public class S3CopyArcEventHandler extends ArcEventHandler<S3CopyProps> {
                     );
                 }
 
-                List<String> errors = messages.stream().limit(3).collect(Collectors.toList());
+                List<String> errors = messages.stream().limit(3).toList();
 
-                manifestURI = manifestWriter.writePartialManifest(completed, lotId, String.format("copy failed on role: %s, num: %d with messages: %s", toRole, failed.size(), errors));
+                manifestURI = manifestWriter.writePartialManifest(
+                        completed,
+                        lotId,
+                        attemptCounter.attemptId(context.getAwsRequestId()),
+                        String.format("copy failed on role: %s, num: %d with messages: %s", toRole, failed.size(), errors)
+                );
             } else if (completed.isEmpty()) { // intentional
                 // if we allow for a filter predicate on the declaration, this will be a valid state
                 LOG.info("no objects copied with no errors, role: {} -> {}, having: {}", fromRole, toRole, fromUris.size());
-                manifestURI = manifestWriter.writeEmptyManifest(completed, lotId);
+                manifestURI = manifestWriter.writeEmptyManifest(lotId);
             } else { // intentional
                 LOG.info("successfully copied objects with no errors, role: {} -> {}, having: {}", fromRole, toRole, fromUris.size());
                 manifestURI = manifestWriter.writeSuccessManifest(completed, lotId);
